# slt_group_2_positional_bias

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: task-template.md
data/processed/: LLM(temp0)-1 - Llama3 405 the best general model and big context size-sample-count-10-1-2025-08-14 16h-02m-55s.parquet  LLM-1 - Llama3 405 the best general model and big context size-sample-count-10-1-2025-08-10 00h-18m-01s.parquet  LLM-1 - Llama3 405 the best general model and big context size-sample-count-20-1-2025-08-09 15h-58m-34s.parquet  LLM-1 - Llama3 405 the best general model and big context size-sample-count-20-1-2025-08-10 14h-40m-19s.parquet  (+16 more)
docs/: mkdocs.yml
notebooks/: 1.0-ag-initial-data-set-generation.ipynb  1.0-mh-LLM-test.ipynb  2.0-ag-dataframe-join-tests.ipynb  2.0-mh-LLM-df_cleanup.ipynb  3.0-ag-dataframe-complex-join-tests.ipynb  4.0-ag-package-merged-data-frame.ipynb  5.0-ag-rm-NaN.ipynb  5.0-ag-sort-snippets.ipynb  6.0-ag-df-sort-demo.ipynb  7.0-ag-store-alias-large-answer.ipynb  8.0-ag-evaluation-cleaned-df.ipynb  8.0-ag-evaluation-jaccard.ipynb  8.0-ag-store-alias-large-answer.ipynb  8.1-ag-evaluation-jaccard.ipynb  8.2-ag-evaluation-spearman.ipynb  8.3-ag-evaluation-bleu-rouge-meteor-bertscore.ipynb  8.4-ag-evaluation-bertscore-verbose.ipynb  8.5-ag-evaluation-averages.ipynb  8.6-ag-evaluation-normalized-averaged.ipynb  8.7-ag-evaluation-non-normalized-averaged.ipynb  9.0-ag-judgement-based-evaluation.ipynb
slt_positional_bias/: __init__.py  app.py  dataset.py  features.py  main.py  plots.py
(+114 files in other folders)
