[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "slt_positional_bias"
version = "0.0.1"
description = "This project investigates how the positioning (based on relevance) and quantity of retrieved snippets affect positional bias and answer quality in Retrieval-Augmented Generation (RAG) models."
authors = [
  { name = "Albert Gesk, Martin Held, Albano Dalifi-Horn" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3"
]
requires-python = "==3.13.1"


[tool.ruff]
line-length = 99
src = ["slt_positional_bias"]
include = ["pyproject.toml", "slt_positional_bias/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["slt_positional_bias"]
force-sort-within-sections = true

